# api-universe

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  metrics.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/adr/: 001-vector-store-selection.md  002-reranking-strategy.md
frontend/api-universe-ui/: package-lock.json  package.json
frontend/api-universe-ui/src/: App.js
src/: metrics_db.py
src/agents/: search_agent.py
src/api/: auth.py  main.py
src/evaluation/: eval.py
src/ingestion/: chunker.py  download_specs.py  embed.py
src/llm/: router.py
src/search/: grounding.py  rag.py  reranker.py  semantic_search.py  vector_store.py
tests/unit/: test_auth.py  test_chunker.py  test_metrics_db.py  test_router.py
